@startuml




    class Coulomb {
        - distance : double
        - force : double
        - k : double
        - parameterList : String[]
        - q1 : double
        - q2 : double
        + compute()
        + computeDistance()
        + computeForce()
        + computeQ1()
        + computeQ2()
        + getDistance()
        + getForce()
        + getParameterList()
        + getQ1()
        + getQ2()
        + setDistance()
        + setForce()
        + setQ1()
        + setQ2()
    }

  


    class FormulaApp {
        - buttonText : String[]
        - firstInput : TextField
        - isLogicOnly : boolean
        - lblResultValue : TextField
        - screenHeight : double
        - screenWidth : double
        - secondInput : TextField
        - thirdInput : TextField
        {static} + main()
        + start()
        - handleFormula()
        - handlePress()
    }

  


    interface IFormula {
        {abstract} + compute()
        {abstract} + getParameterList()
    }

  


    class Volume {
        - height : double
        - length : double
        - parameterList : String[]
        - volume : double
        - width : double
        + compute()
        + computeHeight()
        + computeLength()
        + computeVolume()
        + computeWidth()
        + getHeight()
        + getLength()
        + getParameterList()
        + getVolume()
        + getWidth()
        + setHeight()
        + setLength()
        + setVolume()
        + setWidth()
    }

  

  Coulomb .up.|> IFormula
  FormulaApp -up-|> javafx.application.Application
  FormulaApp o-- IFormula : formula
  Volume .up.|> IFormula


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
